// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Container should render empty 1`] = `
<div
  className="container"
/>
`;

exports[`Container should render with child 1`] = `
<div
  className="container"
>
  <div>
    Some child
  </div>
</div>
`;
